--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Upload de Imagem</title>
+    <title>Upload e Processamento</title>
 </head>
 <body>
-    <h1>Enviar imagem</h1>
+    <h1>Upload de Imagem com Processamento</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="file">
-        <input type="submit" value="Enviar">
+        <input type="file" name="image" required>
+        <input type="submit" value="Enviar imagem">
     </form>
 </body>
 </html>
